odoo/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: odoo
  annotations:
    argocd.argoproj.io/sync-wave: "-1"
